Set header fonts back to large size using h1 to look better (also good for SEO later). Discovered h1 in people was not properly aligned, so fixed that.

--- a/views/sass/_people.sass
+++ b/views/sass/_people.sass
@@ -19,7 +19,7 @@
         @include round(1.0rem)
 
   h1
-    @include col(1, 1, $margin_p, $gutter_p)
+    @include col(1, 1, 0, 0)
     %extend %box
     text:
       align       : center
@@ -40,7 +40,7 @@
       @include round(1.0rem)
       overflow    : hidden
     
-    h2
+    h3
       text:
         align     : center
       margin:
@@ -65,17 +65,17 @@
   
   @media (min-width: 768px)
     @include row($margin_t)
-    h1, .team
+    .team
       @include col(1, 1, $margin_t, $gutter_t)
     .person
       @include col(3, 1, 0, 0)
 
   @media (min-width: 1024px)
     @include row($margin_s)
-    h1, .team
+    .team
       @include col(1, 1, $margin_s, $gutter_s)
   
   @media (min-width: 1920px)
     @include row($margin_l)
-    h1, .team
+    .team
       @include col(1, 1, $margin_l, $gutter_l)
