--- a/views/sass/_typography.sass
+++ b/views/sass/_typography.sass
@@ -32,15 +32,15 @@
 
 h1
   @extend %header_font
-  @extend %two_font
+  @extend %three_font
 
 h2
   @extend %header_font
-  @extend %one_font
+  @extend %two_font
 
 h3
   @extend %copy_font
-  @extend %two_font
+  @extend %one_font
 
 p, ul, ol, li
   @extend %copy_font
